# btc-accounting

./: .env.example  .gitignore  Cargo.toml  DEVELOP.md  LICENSE  README.md  bitcoin-core-ipc-extranonce.patch
.github/workflows/: ci.yml
scripts/: diff_camt053_fields.py
src/: accounting.rs  common.rs  exchange_rate.rs  iban.rs  lib.rs  main.rs
src/commands/: cache_rates.rs  export.rs  mod.rs  received_value.rs  reconstruct.rs
src/export/: README.md  camt053.rs  mod.rs
src/import/: bitcoin_core_rpc.rs  mod.rs  phoenixd_csv.rs
tests/: phoenixd.rs
tests/fixtures/: README.md  coinbase_cache.json  kraken_xbteur_2026-03-21_trades.csv  mock_rates_2025.json  phoenixd_sample.csv  phoenixd_sample_camt053.xml  rates_2024.json  salary_2025_camt053.xml
tests/regtest/: ipc_mining.rs  main.rs  node.rs  wallet.rs
