[package]
name = "btc_fiat_value"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std"] }
dotenvy = "0.15.7"
fixed_decimal = "0.7.1"
icu_decimal = "2.1.1"
icu_locale = "2.1.1"
quick-xml = "0.37"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
