[package]
name = "btc_fiat_value"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std"] }
csv = "1.3.1"
dotenvy = "0.15.7"
fixed_decimal = "0.7.1"
icu_decimal = "2.1.1"
icu_locale = "2.1.1"
quick-xml = "0.37"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zip = { version = "2.2.3", default-features = false, features = ["deflate"] }

[dev-dependencies]
bitcoin-capnp-types = { git = "https://github.com/2140-dev/bitcoin-capnp-types" }
capnp = "0.25.0"
capnp-rpc = "0.25.0"
futures = "0.3"
rand = "0.9"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
